# programming_course_reports

./: CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: main.yml
modules/mpi/rezantseva_a_rectangle_method/: rezantseva_a_rectangle_method.tex
modules/task_3/ivanov_n_constr_conv_jarvis/: CMakeLists.txt  ivanov_n_constr_conv_jarvis.tex
modules/test_tasks/test_latex/: CMakeLists.txt
scripts/: convert_tex_to_pdf.py  miktex_install.ps1  windows_install_miktex.ps1
